k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-backend
  namespace: portal
  labels:
    app: portal-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000 
      protocol: TCP
      name: http
  selector:
    app: portal-backend
